# armis-appsec-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  NOTICE  README.md  __init__.py  auth.py  hash_utils.py  pyproject.toml  requirements.txt  run.sh  scanner_core.py  server.py  suppression.py
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
hooks/: __init__.py  hooks.json  pre_commit_scan.py  protect_scan_pass.py
hooks/tests/: __init__.py  conftest.py  test_auth.py  test_inline_suppression.py  test_mcp_integration.py  test_pre_commit_scan.py  test_protect_scan_pass.py  test_scanner_core.py  test_server_helpers.py  test_server_security.py  test_suppression.py  test_suppression_integration.py  transcript_builder.py
skills/security-scan/: SKILL.md
